// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`notification views > does not generate self notifications for likes via own repost 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
      "via": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(4)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(5)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(5)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(5)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(5)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(3)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(2)",
        "uri": "record(1)",
      },
      "via": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(3)",
  },
]
`;

exports[`notification views > does not generate self notifications for likes via own repost 2`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like-via-repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(4)",
        "uri": "record(5)",
      },
      "via": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > fetches notifications omitting mentions and replies for taken-down posts 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(3)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(5)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(6)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "follow",
    "record": {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(2)",
    },
    "uri": "record(6)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(6)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(8)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(6)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(10)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(8)",
        "uri": "record(10)",
      },
    },
    "uri": "record(9)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(6)",
        "following": "record(7)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(11)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(11)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(12)",
        "following": "record(13)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "follow",
    "record": {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(2)",
    },
    "uri": "record(12)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(11)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(12)",
        "following": "record(13)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [
      {
        "cid": "cids(12)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "did:example:labeler",
        "uri": "record(14)",
        "val": "test-label",
      },
      {
        "cid": "cids(12)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "did:example:labeler",
        "uri": "record(14)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.images",
        "images": [
          {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "image": {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": {
                "$link": "cids(13)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(14)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(11)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(12)",
        "following": "record(13)",
        "muted": false,
      },
    },
    "cid": "cids(14)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(10)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(8)",
        "uri": "record(10)",
      },
    },
    "uri": "record(15)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(11)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(12)",
        "following": "record(13)",
        "muted": false,
      },
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(16)",
  },
]
`;

exports[`notification views > fetches notifications with default priority 1`] = `
{
  "cursor": "1970-01-01T00:00:00.000Z",
  "notifications": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "repost-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.repost",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(0)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(6)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(6)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like",
      "reasonSubject": "record(8)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "subject": {
          "cid": "cids(7)",
          "uri": "record(8)",
        },
      },
      "uri": "record(7)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(8)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "follow",
      "record": {
        "$type": "app.bsky.graph.follow",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": "user(2)",
      },
      "uri": "record(2)",
    },
  ],
  "priority": true,
  "seenAt": "1970-01-01T00:00:00.000Z",
}
`;

exports[`notification views > fetches notifications with explicit priority 1`] = `
{
  "cursor": "1970-01-01T00:00:00.000Z",
  "notifications": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "repost-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.repost",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(0)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(6)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(6)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like",
      "reasonSubject": "record(8)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "subject": {
          "cid": "cids(7)",
          "uri": "record(8)",
        },
      },
      "uri": "record(7)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(8)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "follow",
      "record": {
        "$type": "app.bsky.graph.follow",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": "user(2)",
      },
      "uri": "record(2)",
    },
  ],
  "priority": true,
  "seenAt": "1970-01-01T00:00:00.000Z",
}
`;

exports[`notification views > fetches notifications with explicit priority 2`] = `
{
  "cursor": "1970-01-01T00:00:00.000Z",
  "notifications": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "repost-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.repost",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(0)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(5)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like-via-repost",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": {
          "cid": "cids(4)",
          "uri": "record(5)",
        },
        "via": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "uri": "record(6)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(8)",
          "muted": false,
        },
      },
      "cid": "cids(6)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like",
      "reasonSubject": "record(9)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000+00:00",
        "subject": {
          "cid": "cids(7)",
          "uri": "record(9)",
        },
      },
      "uri": "record(7)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(8)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "like",
      "reasonSubject": "record(9)",
      "record": {
        "$type": "app.bsky.feed.like",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "subject": {
          "cid": "cids(7)",
          "uri": "record(9)",
        },
      },
      "uri": "record(10)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(4)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "quote",
      "reasonSubject": "record(9)",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(7)",
            "uri": "record(9)",
          },
        },
        "facets": [
          {
            "features": [
              {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(0)",
              },
            ],
            "index": {
              "byteEnd": 18,
              "byteStart": 0,
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "uri": "record(5)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(8)",
          "muted": false,
        },
      },
      "cid": "cids(9)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "follow",
      "record": {
        "$type": "app.bsky.graph.follow",
        "createdAt": "1970-01-01T00:00:00.000000Z",
        "subject": "user(5)",
      },
      "uri": "record(8)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-a",
          },
          {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(3)",
            "val": "self-label-b",
          },
        ],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(10)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": true,
      "labels": [],
      "reason": "follow",
      "record": {
        "$type": "app.bsky.graph.follow",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "subject": "user(5)",
      },
      "uri": "record(2)",
    },
  ],
  "priority": false,
  "seenAt": "1970-01-01T00:00:00.000Z",
}
`;

exports[`notification views > fetches notifications without a last-seen 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(3)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "mention",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.record",
        "record": {
          "cid": "cids(5)",
          "uri": "record(6)",
        },
      },
      "facets": [
        {
          "features": [
            {
              "$type": "app.bsky.richtext.facet#mention",
              "did": "user(1)",
            },
          ],
          "index": {
            "byteEnd": 18,
            "byteStart": 0,
          },
        },
      ],
      "text": "@alice.bluesky.xyz is the best",
    },
    "uri": "record(5)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(6)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(7)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "follow",
    "record": {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(8)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(8)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "indeed",
    },
    "uri": "record(10)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(9)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "of course",
    },
    "uri": "record(11)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(10)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(11)",
        "uri": "record(13)",
      },
    },
    "uri": "record(12)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(2)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(8)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(12)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(14)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(14)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(15)",
        "following": "record(16)",
        "muted": false,
      },
    },
    "cid": "cids(13)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "follow",
    "record": {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(1)",
    },
    "uri": "record(15)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(14)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(15)",
        "following": "record(16)",
        "muted": false,
      },
    },
    "cid": "cids(15)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [
      {
        "cid": "cids(15)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "did:example:labeler",
        "uri": "record(17)",
        "val": "test-label",
      },
      {
        "cid": "cids(15)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "did:example:labeler",
        "uri": "record(17)",
        "val": "test-label-2",
      },
    ],
    "reason": "reply",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.images",
        "images": [
          {
            "alt": "../dev-env/assets/key-landscape-small.jpg",
            "image": {
              "$type": "blob",
              "mimeType": "image/jpeg",
              "ref": {
                "$link": "cids(16)",
              },
              "size": 4114,
            },
          },
        ],
      },
      "reply": {
        "parent": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
        "root": {
          "cid": "cids(3)",
          "uri": "record(4)",
        },
      },
      "text": "hear that label_me label_me_2",
    },
    "uri": "record(17)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(14)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(15)",
        "following": "record(16)",
        "muted": false,
      },
    },
    "cid": "cids(17)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(13)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(11)",
        "uri": "record(13)",
      },
    },
    "uri": "record(18)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(14)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(3)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(15)",
        "following": "record(16)",
        "muted": false,
      },
    },
    "cid": "cids(18)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(19)",
  },
]
`;

exports[`notification views > filters notifications by multiple reasons 1`] = `
{
  "notifications": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "reply",
      "reasonSubject": "record(3)",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": {
          "parent": {
            "cid": "cids(2)",
            "uri": "record(3)",
          },
          "root": {
            "cid": "cids(1)",
            "uri": "record(4)",
          },
        },
        "text": "indeed",
      },
      "uri": "record(0)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(0)",
        "handle": "carol.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(2)",
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(3)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "reply",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": {
          "parent": {
            "cid": "cids(1)",
            "uri": "record(4)",
          },
          "root": {
            "cid": "cids(1)",
            "uri": "record(4)",
          },
        },
        "text": "of course",
      },
      "uri": "record(5)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(5)",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(1)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "followedBy": "record(8)",
          "following": "record(7)",
          "muted": false,
        },
      },
      "cid": "cids(4)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(6)",
          "val": "test-label",
        },
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "did:example:labeler",
          "uri": "record(6)",
          "val": "test-label-2",
        },
      ],
      "reason": "reply",
      "reasonSubject": "record(4)",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.images",
          "images": [
            {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "image": {
                "$type": "blob",
                "mimeType": "image/jpeg",
                "ref": {
                  "$link": "cids(6)",
                },
                "size": 4114,
              },
            },
          ],
        },
        "reply": {
          "parent": {
            "cid": "cids(1)",
            "uri": "record(4)",
          },
          "root": {
            "cid": "cids(1)",
            "uri": "record(4)",
          },
        },
        "text": "hear that label_me label_me_2",
      },
      "uri": "record(6)",
    },
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(3)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(10)",
          "muted": false,
        },
      },
      "cid": "cids(7)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "mention",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(8)",
            "uri": "record(11)",
          },
        },
        "facets": [
          {
            "features": [
              {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(4)",
              },
            ],
            "index": {
              "byteEnd": 18,
              "byteStart": 0,
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "uri": "record(9)",
    },
  ],
  "priority": false,
  "seenAt": "1970-01-01T00:00:00.000Z",
}
`;

exports[`notification views > filters notifications by reason 1`] = `
{
  "notifications": [
    {
      "author": {
        "associated": {
          "activitySubscription": {
            "allowSubscriptions": "followers",
          },
          "chat": {
            "allowIncoming": "none",
          },
        },
        "did": "user(0)",
        "handle": "dan.test",
        "labels": [],
        "viewer": {
          "blockedBy": false,
          "following": "record(1)",
          "muted": false,
        },
      },
      "cid": "cids(0)",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "isRead": false,
      "labels": [],
      "reason": "mention",
      "record": {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": {
          "$type": "app.bsky.embed.record",
          "record": {
            "cid": "cids(1)",
            "uri": "record(2)",
          },
        },
        "facets": [
          {
            "features": [
              {
                "$type": "app.bsky.richtext.facet#mention",
                "did": "user(1)",
              },
            ],
            "index": {
              "byteEnd": 18,
              "byteStart": 0,
            },
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "uri": "record(0)",
    },
  ],
  "priority": false,
  "seenAt": "1970-01-01T00:00:00.000Z",
}
`;

exports[`notification views > generates notifications for likes 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(6)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(6)",
      },
    },
    "uri": "record(3)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(1)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    "cid": "cids(4)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(7)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(6)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(6)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(6)",
      },
    },
    "uri": "record(8)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(3)/cids(6)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "hi im bob label_me",
      "did": "user(2)",
      "displayName": "bobby",
      "handle": "bob.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(10)",
        "following": "record(9)",
        "muted": false,
      },
    },
    "cid": "cids(7)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(11)",
  },
]
`;

exports[`notification views > generates notifications for likes via repost 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like",
    "reasonSubject": "record(3)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(4)",
        "uri": "record(3)",
      },
      "via": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > generates notifications for likes via repost 2`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "like-via-repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.like",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(4)",
        "uri": "record(5)",
      },
      "via": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > generates notifications for quotes 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(3)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "follow",
    "record": {
      "$type": "app.bsky.graph.follow",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": "user(3)",
    },
    "uri": "record(2)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(3)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "muted": false,
      },
    },
    "cid": "cids(5)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [
      {
        "cid": "cids(5)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "did:example:labeler",
        "uri": "record(4)",
        "val": "test-label",
      },
    ],
    "reason": "quote",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "embed": {
        "$type": "app.bsky.embed.record",
        "record": {
          "cid": "cids(1)",
          "uri": "record(1)",
        },
      },
      "text": "yoohoo label_me",
    },
    "uri": "record(4)",
  },
]
`;

exports[`notification views > generates notifications for reposts 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(2)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
        "chat": {
          "allowIncoming": "none",
        },
      },
      "did": "user(0)",
      "handle": "dan.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(3)",
  },
]
`;

exports[`notification views > generates notifications for reposts via repost 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "carol.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(1)",
      },
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(2)/cids(3)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(4)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(4)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(4)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(3)",
        "muted": false,
      },
    },
    "cid": "cids(2)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "repost",
    "reasonSubject": "record(1)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(1)",
        "uri": "record(1)",
      },
      "via": {
        "cid": "cids(0)",
        "uri": "record(0)",
      },
    },
    "uri": "record(2)",
  },
]
`;

exports[`notification views > generates notifications for reposts via repost 2`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "repost-via-repost",
    "reasonSubject": "record(4)",
    "record": {
      "$type": "app.bsky.feed.repost",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "subject": {
        "cid": "cids(4)",
        "uri": "record(5)",
      },
      "via": {
        "cid": "cids(3)",
        "uri": "record(4)",
      },
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > generates notifications for verification created and removed 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "verified",
    "record": {
      "$type": "app.bsky.graph.verification",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "displayName": "bobby",
      "handle": "bob.test",
      "subject": "user(2)",
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > generates notifications for verification created and removed 2`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "unverified",
    "record": {
      "$type": "app.bsky.notification.defs#recordDeleted",
    },
    "uri": "record(0)",
  },
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": [
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-a",
        },
        {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(3)",
          "val": "self-label-b",
        },
      ],
      "viewer": {
        "blockedBy": false,
        "followedBy": "record(2)",
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": true,
    "labels": [],
    "reason": "verified",
    "record": {
      "$type": "app.bsky.notification.defs#recordDeleted",
    },
    "uri": "record(0)",
  },
]
`;

exports[`notification views > handles hide tag filters > filters posts with hide tag 1`] = `[]`;

exports[`notification views > handles hide tag filters > shows posts with hide tag if they are followed 1`] = `
[
  {
    "author": {
      "associated": {
        "activitySubscription": {
          "allowSubscriptions": "followers",
        },
      },
      "did": "user(0)",
      "handle": "eve.test",
      "labels": [],
      "viewer": {
        "blockedBy": false,
        "following": "record(1)",
        "muted": false,
      },
    },
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "isRead": false,
    "labels": [],
    "reason": "reply",
    "reasonSubject": "record(2)",
    "record": {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "reply": {
        "parent": {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
        "root": {
          "cid": "cids(1)",
          "uri": "record(2)",
        },
      },
      "text": "no thanks",
    },
    "uri": "record(0)",
  },
]
`;
